Fixed scripts. Added docker push.
Signed-off-by: Oleksii Aliakin <alex@nls.la>

--- a/Qt/Dockerfile
+++ b/Qt/Dockerfile
@@ -1,8 +1,8 @@
 FROM ubuntu:16.04
 MAINTAINER alex@nls.la
 
-RUN DEBIAN_FRONTEND=noninteractive apt update \
- && DEBIAN_FRONTEND=noninteractive apt install --no-install-recommends -y \
+RUN DEBIAN_FRONTEND=noninteractive apt-get update \
+ && DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
     "^libxcb.*"                            \
     autoconf                               \
     automake                               \
@@ -43,35 +43,24 @@ RUN DEBIAN_FRONTEND=noninteractive apt update \
     perl                                   \
     python                                 \
     ruby                                   \
-    wget
+    wget                                   \
+ && apt-get clean                          \
+ && rm -rf /var/lib/apt/lists/
 
-ENV QTDIR="/usr/local/Qt56"                       \
-    LD_LIBRARY_PATH=/usr/local/Qt56/lib           \
-    PKG_CONFIG_PATH=/usr/local/Qt56/lib/pkgconfig \
-    PATH=/usr/local/Qt56/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games
+ENV QTDIR="/usr"
 
 RUN cd /tmp                                                                    \
- && git clone git://code.qt.io/qt-labs/qbs.git                                 \
- && git clone https://github.com/NixOS/patchelf.git patchelf                   \
  && wget -c http://download.qt.io/official_releases/qt/5.6/5.6.1/single/qt-everywhere-opensource-src-5.6.1.tar.gz \
                                                                                \
  && mkdir /tmp/qt-build && cd /tmp/qt-build                                    \
  && tar xvf /tmp/qt-everywhere-opensource-src-5.6.1.tar.gz                     \
  && cd /tmp/qt-build/qt-everywhere-opensource-src-5.6.1                        \
                                                                                \
- && ./configure -prefix "/usr/local/Qt56" -confirm-license -opensource -release\
+ && ./configure -prefix "/usr" -confirm-license -opensource -release           \
                 -dbus-linked -openssl-linked -qt-zlib -qt-libjpeg -qt-libpng   \
                 -qt-xcb -qt-xkbcommon -qt-xkbcommon-x11 -qt-freetype -qt-pcre  \
-                -qt-harfbuzz -no-nis -icu -nomake examples                     \
+                -qt-harfbuzz -icu -no-nis                                      \
  && make -j5                                                                   \
  && make install                                                               \
                                                                                \
- && cd /tmp                                                                    \
- && qmake -r qbs/qbs.pro                                                       \
- && make -j5                                                                   \
- && make install                                                               \
-                                                                               \
- && cd /tmp                                                                    \
- && cd patchelf && ./bootstrap.sh && ./configure                               \
- && make -j5 && make install                                                   \
  && cd /tmp && find . -delete
