--- a/qt/Dockerfile_5.6.1
+++ b/qt/Dockerfile_5.6.1
@@ -44,8 +44,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update \
     python                                 \
     ruby                                   \
     wget                                   \
- && apt-get clean                          \
- && rm -rf /var/lib/apt/lists/
+ && apt-get clean
 
 ENV QTDIR="/usr"
 
@@ -63,4 +62,6 @@ RUN cd /tmp                                                                    \
  && make -j5                                                                   \
  && make install                                                               \
                                                                                \
- && cd /tmp && find . -delete
+ && cd /tmp/               && find . -delete                                   \
+ && cd /var/lib/apt/lists/ && find . -delete                                   \
+ && cd /var/tmp/           && find . -delete
