--- a/qtcreator/Dockerfile_4.0.0
+++ b/qtcreator/Dockerfile_4.0.0
@@ -1,12 +1,15 @@
-FROM approximator/qbs:1.5
+FROM approximator/qt:5.7.0
 MAINTAINER alex@nls.la
 
 RUN cd /tmp                                                                    \
- && git clone --recursive https://code.qt.io/qt-creator/qt-creator.git         \
+ && git clone --recursive -b v4.0.0 https://code.qt.io/qt-creator/qt-creator.git \
  && qmake -v                                                                   \
  && mkdir /tmp/qt-creator-build                                                \
  && cd qt-creator-build                                                        \
  && qmake -r ../qt-creator/qtcreator.pro                                       \
  && make -j5                                                                   \
  && make install INSTALL_ROOT=/usr                                             \
- && cd /tmp && find . -delete
+                                                                               \
+ && cd /tmp/               && find . -delete                                   \
+ && cd /var/lib/apt/lists/ && find . -delete                                   \
+ && cd /var/tmp/           && find . -delete
