--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,31 @@
 services:
   - docker
 
-# env:
+env:
+  # Unfortunately, qtcreator and qt can't be built on travis-ci
+  # due to resources limit
   # - IMAGE=Qt IMAGE_TAG=approximator/qt
   # - IMAGE=QtCreator IMAGE_TAG=approximator/qtcreator
-  # - IMAGE=traviscli      IMAGE_TAG=traviscli VERSION=latest
-  # - IMAGE=qbs            IMAGE_TAG=qbs       VERSION=1.5
-  # - IMAGE=qttest         IMAGE_TAG=qttest    VERSION=15.10
-  # - IMAGE=texlive        IMAGE_TAG=texlive   VERSION=latest
-  # - IMAGE=pycharm        IMAGE_TAG=pycharm   VERSION=latest
+  - IMAGE=traviscli IMAGE_TAG=traviscli VERSION=1.8.2         DOCKERFILE=Dockerfile               LATEST=yes
+  - IMAGE=qbs       IMAGE_TAG=qbs       VERSION=1.4.0.Qt5.6.1 DOCKERFILE=Dockerfile_1.4.0.Qt5.6.1 LATEST=no
+  - IMAGE=qbs       IMAGE_TAG=qbs       VERSION=1.4.0.Qt5.7.0 DOCKERFILE=Dockerfile_1.4.0.Qt5.7.0 LATEST=no
+  - IMAGE=qbs       IMAGE_TAG=qbs       VERSION=1.5.0.Qt5.6.1 DOCKERFILE=Dockerfile_1.5.0.Qt5.6.1 LATEST=no
+  - IMAGE=qbs       IMAGE_TAG=qbs       VERSION=1.5.0.Qt5.7.0 DOCKERFILE=Dockerfile_1.5.0.Qt5.7.0 LATEST=no
+  - IMAGE=qbs       IMAGE_TAG=qbs       VERSION=1.5.1.Qt5.6.1 DOCKERFILE=Dockerfile_1.5.1.Qt5.6.1 LATEST=no
+  - IMAGE=qbs       IMAGE_TAG=qbs       VERSION=1.5.1.Qt5.7.0 DOCKERFILE=Dockerfile_1.5.1.Qt5.7.0 LATEST=yes
+  - IMAGE=qttest    IMAGE_TAG=qttest    VERSION=15.10         DOCKERFILE=Dockerfile               LATEST=yes
+  - IMAGE=texlive   IMAGE_TAG=texlive   VERSION=15.10         DOCKERFILE=Dockerfile               LATEST=yes
+  - IMAGE=pycharm   IMAGE_TAG=pycharm   VERSION=2016.1.4      DOCKERFILE=Dockerfile               LATEST=yes
 
 script:
-  echo "Disabled"
   # build images
-  # - cd $IMAGE
-  # - docker build -t $IMAGE_TAG .
+  - cd $IMAGE
+  - docker build -f $DOCKERFILE -t $DOCKER_USERNAME/$IMAGE_TAG:$VERSION .
 
-# after_success:
-  # - docker tag $IMAGE_TAG $DOCKER_USERNAME/$IMAGE_TAG:$VERSION
-  # - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  # - docker push $DOCKER_USERNAME/$IMAGE_TAG:$VERSION
+after_success:
+  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - docker push $DOCKER_USERNAME/$IMAGE_TAG:$VERSION
+  - if [ "$LATEST" = "yes" ];then
+    docker tag $DOCKER_USERNAME/$IMAGE_TAG:$VERSION $DOCKER_USERNAME/$IMAGE_TAG:latest;
+    docker push $DOCKER_USERNAME/$IMAGE_TAG:latest;
+    fi
