--- a/qt/Dockerfile_5.6.1
+++ b/qt/Dockerfile_5.6.1
@@ -10,6 +10,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update \
     cmake                                  \
     flex                                   \
     g++                                    \
+    gdb                                    \
     git                                    \
     gperf                                  \
     libasound2-dev                         \
@@ -55,11 +56,25 @@ RUN cd /tmp                                                                    \
  && tar xvf /tmp/qt-everywhere-opensource-src-5.6.1.tar.gz                     \
  && cd /tmp/qt-build/qt-everywhere-opensource-src-5.6.1                        \
                                                                                \
- && ./configure -prefix "/usr" -confirm-license -opensource -release           \
-                -dbus-linked -openssl-linked -qt-zlib -qt-libjpeg -qt-libpng   \
-                -qt-xcb -qt-xkbcommon -qt-xkbcommon-x11 -qt-freetype -qt-pcre  \
-                -qt-harfbuzz -icu -no-nis                                      \
+ && ./configure -prefix "/usr"                                                 \
+                -confirm-license                                               \
+                -opensource                                                    \
+                -release                                                       \
+                -dbus-linked                                                   \
+                -openssl-linked                                                \
+                -qt-zlib                                                       \
+                -qt-libjpeg                                                    \
+                -qt-libpng                                                     \
+                -qt-xcb                                                        \
+                -qt-xkbcommon                                                  \
+                -qt-xkbcommon-x11                                              \
+                -qt-freetype                                                   \
+                -qt-pcre                                                       \
+                -qt-harfbuzz                                                   \
+                -icu                                                           \
+                -no-nis                                                        \
  && make -j5                                                                   \
+ && make docs                                                                  \
  && make install                                                               \
                                                                                \
  && cd /tmp/               && find . -delete                                   \
