--- a/pycharm/Dockerfile_2016.1.4
+++ b/pycharm/Dockerfile_2016.1.4
@@ -6,11 +6,14 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update \
  && DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
     gcc                        \
     git                        \
+    libfreetype6-dev           \
+    libxft-dev                 \
     libxml2-dev                \
     libxrender1                \
     libxslt1-dev               \
     libxtst6                   \
     openjdk-8-jre              \
+    pkg-config                 \
     python                     \
     python-dev                 \
     python-pip                 \
