--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ env:
   # due to resources limit
   # - IMAGE=Qt IMAGE_TAG=approximator/qt
   # - IMAGE=QtCreator IMAGE_TAG=approximator/qtcreator
+  - IMAGE=cppcheck  IMAGE_TAG=cppcheck  VERSION=1.75          DOCKERFILE=Dockerfile               LATEST=yes
+  - IMAGE=cppcheck  IMAGE_TAG=cppcheck  VERSION=1.74          DOCKERFILE=Dockerfile_1.74          LATEST=no
   - IMAGE=traviscli IMAGE_TAG=traviscli VERSION=1.8.2         DOCKERFILE=Dockerfile               LATEST=yes
   - IMAGE=qbs       IMAGE_TAG=qbs       VERSION=1.4.0.Qt5.6.1 DOCKERFILE=Dockerfile_1.4.0.Qt5.6.1 LATEST=no
   - IMAGE=qbs       IMAGE_TAG=qbs       VERSION=1.4.0.Qt5.7.0 DOCKERFILE=Dockerfile_1.4.0.Qt5.7.0 LATEST=no
