[qtcreator] Added arm-none-eabi-newlib
Signed-off-by: Oleksii Aliakin <alex@nls.la>

--- a/qtcreator/Dockerfile_stlink
+++ b/qtcreator/Dockerfile_stlink
@@ -7,6 +7,8 @@ RUN apt-get update                                 \
         dh-autoreconf                              \
         gcc-arm-none-eabi                          \
         gdb-arm-none-eabi                          \
+        libnewlib-dev                              \
+        libstdc++-arm-none-eabi-newlib             \
         libusb-1.0.0-dev                           \
                                                    \
  && cd /tmp/                                       \
