--- a/pycharm/Dockerfile_2016.2
+++ b/pycharm/Dockerfile_2016.2
@@ -42,3 +42,10 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update \
  && cd /var/tmp/           && find . -delete
 
 ENTRYPOINT ["/etc/pycharm/bin/pycharm.sh"]
+
+ARG BUILD_DATE
+ARG VCS_REF
+LABEL org.label-schema.build-date=$BUILD_DATE                                  \
+      org.label-schema.vcs-ref=$VCS_REF                                        \
+      org.label-schema.vcs-type="git"                                          \
+      org.label-schema.vcs-url="https://github.com/approximator/Dockerfiles"
