--- a/traviscli/Dockerfile
+++ b/traviscli/Dockerfile
@@ -21,4 +21,9 @@ WORKDIR /repo
 
 ENTRYPOINT ["/usr/local/bin/travis"]
 
-# https://github.com/travis-ci/travis.rb#installation
+ARG BUILD_DATE
+ARG VCS_REF
+LABEL org.label-schema.build-date=$BUILD_DATE                                  \
+      org.label-schema.vcs-ref=$VCS_REF                                        \
+      org.label-schema.vcs-type="git"                                          \
+      org.label-schema.vcs-url="https://github.com/approximator/Dockerfiles"
