[cppcheck] Use common entry point.

--- a/cppcheck/Dockerfile_1.74
+++ b/cppcheck/Dockerfile_1.74
@@ -1,7 +1,11 @@
 FROM ubuntu:16.04
 MAINTAINER alex@nls.la
 
-RUN DEBIAN_FRONTEND=noninteractive apt-get update                              \
+ADD common/entrypoint.sh /usr/local/bin/entrypoint.sh
+ADD common/setup.sh /tmp/setup.sh
+
+RUN /tmp/setup.sh                                                              \
+ && DEBIAN_FRONTEND=noninteractive apt-get update                              \
  && DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y  \
     ca-certificates   \
     g++               \
@@ -24,6 +28,8 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update                              \
  && cd /tmp/               && find . -delete                                   \
  && cd /var/lib/apt/lists/ && find . -delete                                   \
  && cd /var/tmp/           && find . -delete
+
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
 ARG BUILD_DATE
 ARG VCS_REF
