--- a/qbs/Dockerfile_1.5.1.Qt5.6.1
+++ b/qbs/Dockerfile_1.5.1.Qt5.6.1
@@ -1,19 +1,22 @@
 FROM approximator/qt:5.6.1
 MAINTAINER alex@nls.la
 
-RUN cd /tmp                                                                \
- && git clone -b v1.5.1 git://code.qt.io/qt-labs/qbs.git                    \
- && git clone https://github.com/NixOS/patchelf.git patchelf               \
- && qmake -r qbs/qbs.pro                                                   \
- && make -j5                                                               \
- && make install                                                           \
-                                                                           \
- && cd /tmp                                                                \
- && cd patchelf && ./bootstrap.sh && ./configure                           \
- && make -j5 && make install                                               \
-                                                                           \
- && cd /tmp/               && find . -delete                               \
- && cd /var/lib/apt/lists/ && find . -delete                               \
+ADD common/entrypoint.sh /usr/local/bin/entrypoint.sh
+ADD common/setup.sh /tmp/setup.sh
+
+RUN /tmp/setup.sh && cd /tmp                                                   \
+ && git clone -b v1.5.1 git://code.qt.io/qt-labs/qbs.git                       \
+ && git clone https://github.com/NixOS/patchelf.git patchelf                   \
+ && qmake -r qbs/qbs.pro                                                       \
+ && make -j5                                                                   \
+ && make install                                                               \
+                                                                               \
+ && cd /tmp                                                                    \
+ && cd patchelf && ./bootstrap.sh && ./configure                               \
+ && make -j5 && make install                                                   \
+                                                                               \
+ && cd /tmp/               && find . -delete                                   \
+ && cd /var/lib/apt/lists/ && find . -delete                                   \
  && cd /var/tmp/           && find . -delete
 
 ARG BUILD_DATE
