[jupyter] Fix build. Moved to yakkety.

--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -1,7 +1,7 @@
-FROM ubuntu:wily
+FROM ubuntu:yakkety
 MAINTAINER alex@nls.la
 
-RUN echo "deb http://archive.ubuntu.com/ubuntu wily multiverse" | tee -a /etc/apt/sources.list \
+RUN echo "deb http://archive.ubuntu.com/ubuntu yakkety multiverse" | tee -a /etc/apt/sources.list \
  && DEBIAN_FRONTEND=noninteractive apt update                             \
  && DEBIAN_FRONTEND=noninteractive apt install --no-install-recommends -y \
         biber                      \
@@ -30,7 +30,7 @@ RUN echo "deb http://archive.ubuntu.com/ubuntu wily multiverse" | tee -a /etc/ap
         texlive-latex-recommended  \
         texlive-publishers         \
         texlive-xetex              \
- && pip3 install -U pip            \
+ && pip3 install -U pip setuptools \
  && pip3 install -U numpy jupyter  \
  && apt-get clean                  \
                                    \
