[qtcreator] Make 4.2.1Qt5.7.1 the latest and stlink from latest

--- a/qtcreator/Dockerfile_stlink
+++ b/qtcreator/Dockerfile_stlink
@@ -1,4 +1,4 @@
-FROM approximator/qtcreator:4.0.2Qt5.7.0
+FROM approximator/qtcreator:latest
 MAINTAINER alex@nls.la
 
 RUN apt-get update                                 \
