--- a/pycharm/Dockerfile_2016.3
+++ b/pycharm/Dockerfile_2016.3
@@ -1,5 +1,4 @@
 FROM ubuntu:16.04
-MAINTAINER alex@nls.la
 
 ENV PYCHARM_HOME=/etc/pycharm
 ADD common/entrypoint.sh /usr/local/bin/entrypoint.sh
@@ -48,7 +47,8 @@ ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
 ARG BUILD_DATE
 ARG VCS_REF
-LABEL org.label-schema.build-date=$BUILD_DATE                                  \
+LABEL maintainer=alex@nls.la                                                   \
+      org.label-schema.build-date=$BUILD_DATE                                  \
       org.label-schema.vcs-ref=$VCS_REF                                        \
       org.label-schema.vcs-type="git"                                          \
       org.label-schema.vcs-url="https://github.com/approximator/Dockerfiles"
