--- a/qt/Dockerfile_5.7.0
+++ b/qt/Dockerfile_5.7.0
@@ -1,5 +1,4 @@
 FROM ubuntu:16.04
-MAINTAINER alex@nls.la
 
 ENV QTDIR="/usr"
 
@@ -82,7 +81,8 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update \
 
 ARG BUILD_DATE
 ARG VCS_REF
-LABEL org.label-schema.build-date=$BUILD_DATE                                  \
+LABEL maintainer=alex@nls.la                                                   \
+      org.label-schema.build-date=$BUILD_DATE                                  \
       org.label-schema.vcs-ref=$VCS_REF                                        \
       org.label-schema.vcs-type="git"                                          \
       org.label-schema.vcs-url="https://github.com/approximator/Dockerfiles"
