--- a/qtcreator/Dockerfile_4.0.2Qt5.7.0
+++ b/qtcreator/Dockerfile_4.0.2Qt5.7.0
@@ -1,5 +1,4 @@
 FROM approximator/qt:5.7.0
-MAINTAINER alex@nls.la
 
 ADD common/entrypoint.sh /usr/local/bin/entrypoint.sh
 ADD common/setup.sh /tmp/setup.sh
@@ -21,7 +20,8 @@ ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
 ARG BUILD_DATE
 ARG VCS_REF
-LABEL org.label-schema.build-date=$BUILD_DATE                                  \
+LABEL maintainer=alex@nls.la                                                   \
+      org.label-schema.build-date=$BUILD_DATE                                  \
       org.label-schema.vcs-ref=$VCS_REF                                        \
       org.label-schema.vcs-type="git"                                          \
       org.label-schema.vcs-url="https://github.com/approximator/Dockerfiles"
