--- a/qtcreator/Dockerfile_stlink
+++ b/qtcreator/Dockerfile_stlink
@@ -1,5 +1,4 @@
 FROM approximator/qtcreator:latest
-MAINTAINER alex@nls.la
 
 RUN apt-get update                                 \
  && apt-get purge -y gdb                           \
@@ -25,7 +24,8 @@ RUN apt-get update                                 \
 
 ARG BUILD_DATE
 ARG VCS_REF
-LABEL org.label-schema.build-date=$BUILD_DATE                                  \
+LABEL maintainer=alex@nls.la                                                   \
+      org.label-schema.build-date=$BUILD_DATE                                  \
       org.label-schema.vcs-ref=$VCS_REF                                        \
       org.label-schema.vcs-type="git"                                          \
       org.label-schema.vcs-url="https://github.com/approximator/Dockerfiles"
