[qbs] Added entrypoint

--- a/qbs/Dockerfile_1.5.1.Qt5.7.0
+++ b/qbs/Dockerfile_1.5.1.Qt5.7.0
@@ -18,6 +18,8 @@ RUN /tmp/setup.sh && cd /tmp                                                   \
  && cd /var/lib/apt/lists/ && find . -delete                                   \
  && cd /var/tmp/           && find . -delete
 
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+
 ARG BUILD_DATE
 ARG VCS_REF
 LABEL maintainer=alex@nls.la                                                   \
