[qt] Build using image using precompiled debs
Signed-off-by: Approximator <alex@nls.la>

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,8 @@ services:
   - docker
 
 env:
-  # Unfortunately, qtcreator and qt can't be built on travis-ci
-  # due to resources limit
-  # - IMAGE=qt
-  # - IMAGE=qtcreator
+  - IMAGE=qt
   - IMAGE=traviscli     WEBHOOK_URL=https://hooks.microbadger.com/images/approximator/traviscli/-EyEPcISuXT3ZKruIVYqk6l4IsA=
-  - IMAGE=qbs           WEBHOOK_URL=https://hooks.microbadger.com/images/approximator/qbs/YAv98VYpn2tF829aRSbGUp3knIs=
   - IMAGE=qttest        WEBHOOK_URL=https://hooks.microbadger.com/images/approximator/qttest/sGTa1LQ5hd_Ef9Z4eoOYrAFfo3I=
   - IMAGE=jupyter       WEBHOOK_URL=https://hooks.microbadger.com/images/approximator/jupyter/D0oYuf7TdKecFpa08pG-cUrS8x0=
   - IMAGE=pycharm       WEBHOOK_URL=https://hooks.microbadger.com/images/approximator/pycharm/g-6QUo2PiO3EErtM2i_MQ6PztbE=
