--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ services:
   - docker
 
 env:
-  - BUILD_TYPE=Release CMD="./qt/build.sh"
-  - BUILD_TYPE=Debug CMD="./qt/build.sh"
+  # - BUILD_TYPE=Release CMD="./qt/build.sh"
+  # - BUILD_TYPE=Debug CMD="./qt/build.sh"
   - CMD="./build.sh traviscli"
     WEBHOOK_URL=https://hooks.microbadger.com/images/approximator/traviscli/-EyEPcISuXT3ZKruIVYqk6l4IsA=
   - CMD="./build.sh qttest"
